<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/modeSpinner"
        android:layout_width="match_parent"
        android:background="@drawable/input_section_background"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp" />
    <EditText
        android:id="@+id/extraContext"
        android:background="@drawable/input_section_background"
        android:hint="@string/extra_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:gravity="top|start"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="12dp" />
    <EditText
        android:id="@+id/inputText"
        android:background="@drawable/input_section_background"
        android:hint="@string/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="6"
        android:gravity="top|start"
        android:padding="12dp"
        android:textSize="16sp" />
    <Button
        android:id="@+id/generateButton"
        android:text="@string/generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>
    <TextView
        android:id="@+id/outputText"
        android:background="@drawable/output_section_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_text"
        android:minLines="6"
        android:padding="12dp"
        android:gravity="top|start"
        android:textSize="16sp" />
    <Button
        android:id="@+id/stopButton"
        android:text="@string/stop"
        android:backgroundTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />
    <Button
        android:id="@+id/copyButton"
        android:text="@string/copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />
    <Button
        android:id="@+id/outputToInputButton"
        android:text="@string/output_to_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />
</LinearLayout>
</ScrollView>